--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  COMPATIBILITY BREAKS:

    * ``bzr log --line`` now indicates which revisions are merges with
      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:

    * ``bzr reconfigure`` now supports --with-trees and --with-no-trees
      options to change the default tree-creation policy of shared
      repositories.  (Matthew Fuller, Marius Kruger, #145033)

    * Debug flags can now be set in ``~/.bazaar/bazaar.conf``.
      (Martin Pool)

    * Filtered views provide a mask over the tree so that users can focus
      on a subset of a tree when doing their work. See ``Filtered views``
      in chapter 7 of the User Guide and ``bzr help view`` for details.
      (Ian Clatworthy)

    * GNU Changelog output can now be produced by ``bzr log --format
      gnu-changelog``.  (Andrea Bolognani, Martin Pool)

    * The ``-Dmemory`` flag now gives memory information on Windows.
      (John Arbash Meinel)

    * Multiple authors for a commit can now be recorded by using the "--author"
      option multiple times. (James Westby, #185772)

    * New clean-tree command, from bzrtools.  (Aaron Bentley, Jelmer Vernoij)

    * New command ``bzr launchpad-open`` opens a Launchpad web page for that
      branch in your web browser, as long as the branch is on Launchpad at all.
      (Jonathan Lange)

  IMPROVEMENTS:

    * ``bzr add`` no longer prints ``add completed`` on success. Failure
      still prints an error message. (Robert Collins)

    * ``bzr branch`` now has a ``--no-tree`` option which turns off the
      generation of a working tree in the new branch.
      (Daniel Watkins, John Klinger, #273993)

    * Bazaar will now point out ``bzr+ssh://`` to the user when they 
      use ssh://. (Jelmer Vernooij, #330535)
