@@ -4,6 +4,11 @@ Bazaar Release Notes
 
 .. contents::
 
+  API CHANGES:
+
+    * The ``pb`` argument to ``fetch()`` is deprecated.
+      (Martin Pool)
+
 
 IN DEVELOPMENT
 --------------
